Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ a{
         background-attachment: none;
         background-position: none;
         background-repeat: no-repeat;
-        background-size: contain;
+        /* background-size: contain; */
         background-image: url('images/trees_nature_background.jpg');
         /* background-size:90%;*/
         /* background-size: cover;*/
